# Projetcs

./: README.md
1_jeuDuPong/pong/: pong.vcxproj  pong.vcxproj.filters
1_jeuDuPong/pong/prog/: game.h
2_breakout/: breakout.sln
2_breakout/breakout/code/: ball.h  game.cpp  game.h  main.cpp
3_Flappy_bird/Flappy_bird/: Flappy_bird.vcxproj.filters
3_Flappy_bird/Flappy_bird/prog/: game.h  main.cpp
4_Geometry_Dash/Geometry_Dash/: Geometry_Dash.vcxproj  Geometry_Dash.vcxproj.filters
4_Geometry_Dash/Geometry_Dash/img/: map.txt
4_Geometry_Dash/Geometry_Dash/prog/: game.cpp  maker.h
5_Stickman_fight/Stickman_fight/: Stickman_fight.vcxproj  Stickman_fight.vcxproj.filters
5_Stickman_fight/Stickman_fight/prog/: Player.cpp
6_Mario/5_Mario/: 5_Mario.vcxproj
6_Mario/5_Mario/img/: map.txt
6_Mario/5_Mario/include/: maker.h  monster.h
_TEMPLATE_/: game.h
codes/1_jeuDuPong/: pong.sln
codes/3_Flappy_bird/: Flappy_bird.sln
codes/4_Geometry_Dash/: Geometry_Dash.sln
codes/5_Stickman_fight/: Stickman_fight.sln
codes/6_Mario/: Mario.sln
codes/6_Mario/5_Mario/: 5_Mario.vcxproj.filters  CMakeLists.txt
codes/6_Mario/5_Mario/include/: Player.h  Tilemap.h  game.h
codes/6_Mario/5_Mario/src/: Tilemap.cpp  main.cpp  maker.cpp
codes/6_Mario/5_Mario/x64/Debug/: vc143.idb
codes/6_Mario/5_Mario/x64/Debug/5_Mario.tlog/: 5_Mario.lastbuildstate  CL.command.1.tlog
codes/_TEMPLATE_/: game.cpp  setup.txt
test/: test.sln
test/test/: game.h  test.vcxproj  test.vcxproj.filters
test321/: test321.sln
test321/test212/: test212.vcxproj
(+75 files in other folders)
